fixed dates and spacing for music posts

--- a/mobile.css
+++ b/mobile.css
@@ -577,6 +577,18 @@ padding-left:30px;
     text-align: center;
 }
 
+.postcontent h4 {
+    font-size: 20px;
+     margin: 0px 10px 0px;
+     font-family: "Aptos";
+     font-weight: normal;
+     text-align: center;
+  }
+
+  .postcontent img {
+    width: 70%;
+}
+
 @media (max-width: 350px) {
     .post-title-container {
         width: 100%;
